--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@angular/language-service": "^15.0.0",
     "@capacitor/assets": "^2.0.4",
     "@capacitor/cli": "^5.0.0",
-    "@ionic/angular-toolkit": "^6.0.0",
+    "@ionic/angular-toolkit": "11.0.1",
     "@ionic/lab": "3.2.15",
     "@types/google.maps": "^3.53.1",
     "@types/jasmine": "~4.0.0",
