--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "moment": "^2.29.4",
     "ng-otp-input": "^1.8.5",
     "ng-recaptcha": "^11.0.0",
+    "ngx-image-cropper": "^7.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
