--- a/package.json
+++ b/package.json
@@ -36,9 +36,10 @@
     "@capacitor/clipboard": "^5.0.0",
     "@capacitor/core": "^5.0.0",
     "@capacitor/device": "^5.0.6",
-    "@capacitor/geolocation": "^5.0.0",
+    "@capacitor/geolocation": "^5.0.7",
     "@capacitor/haptics": "^5.0.0",
     "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/network": "^5.0.7",
     "@capacitor/push-notifications": "^5.0.5",
     "@capacitor/splash-screen": "^5.0.5",
     "@capacitor/status-bar": "^5.0.0",
