--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "cordova-plugin-filepath": "^1.6.0",
     "cordova-plugin-media-capture": "^4.0.0",
     "cordova-plugin-request-location-accuracy": "^2.3.0",
+    "cordova-plugin-splashscreen": "^6.0.2",
     "cordova-plugin-x-socialsharing": "^6.0.4",
     "cordova.plugins.diagnostic": "^7.1.1",
     "es6-promise-plugin": "^4.2.2",
