--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@capacitor/device": "^5.0.6",
     "@capacitor/geolocation": "^5.0.7",
     "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^6.1.2",
     "@capacitor/keyboard": "^5.0.0",
     "@capacitor/network": "^5.0.7",
     "@capacitor/push-notifications": "^5.0.5",
