--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -45,5 +45,22 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+
+	<!-- Camera Usage Permission -->
+    <key>NSCameraUsageDescription</key>
+    <string>We need access to your camera to capture photos and videos.</string>
+
+    <!-- Microphone Usage Permission -->
+    <key>NSMicrophoneUsageDescription</key>
+    <string>We need access to your microphone to record audio while capturing videos.</string>
+
+    <!-- Photo Library Usage Permission -->
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>We need access to your photo library to select and upload photos and videos.</string>
+
+    <!-- Photo Library Add Permission -->
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>We need permission to save photos and videos to your photo library.</string>
+
 </dict>
 </plist>
