--- a/package.json
+++ b/package.json
@@ -31,21 +31,21 @@
     "@awesome-cordova-plugins/media-capture": "^6.3.0",
     "@awesome-cordova-plugins/social-sharing": "^6.3.0",
     "@capacitor-community/barcode-scanner": "^4.0.1",
-    "@capacitor/android": "5.0.5",
+    "@capacitor/android": "^5.0.0",
     "@capacitor/app": "^5.0.0",
-    "@capacitor/camera": "^5.0.6",
+    "@capacitor/camera": "^5.0.0",
     "@capacitor/clipboard": "^5.0.0",
-    "@capacitor/core": "^5.0.0",
-    "@capacitor/device": "^5.0.6",
-    "@capacitor/geolocation": "^5.0.7",
+    "@capacitor/core": "^5.7.8",
+    "@capacitor/device": "^5.0.0",
+    "@capacitor/geolocation": "^5.0.0",
     "@capacitor/haptics": "^5.0.0",
-    "@capacitor/ios": "^6.1.2",
+    "@capacitor/ios": "^5.7.8",
     "@capacitor/keyboard": "^5.0.0",
-    "@capacitor/network": "^5.0.7",
-    "@capacitor/push-notifications": "^5.0.5",
-    "@capacitor/splash-screen": "^5.0.5",
+    "@capacitor/network": "^5.0.0",
+    "@capacitor/push-notifications": "^5.0.0",
+    "@capacitor/splash-screen": "^5.0.0",
     "@capacitor/status-bar": "^5.0.0",
-    "@capacitor/text-zoom": "^5.0.2",
+    "@capacitor/text-zoom": "^5.0.0",
     "@capawesome/capacitor-file-picker": "^6.0.1",
     "@googlemaps/markerclusterer": "^2.0.14",
     "@ionic/angular": "^6.1.9",
@@ -87,7 +87,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@angular/language-service": "^15.0.0",
     "@capacitor/assets": "^2.0.4",
-    "@capacitor/cli": "^5.0.0",
+    "@capacitor/cli": "^5.7.8",
     "@ionic/angular-toolkit": "11.0.1",
     "@ionic/lab": "3.2.15",
     "@types/google.maps": "^3.53.1",
