--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -53,5 +53,8 @@
 	<string>We need access to your photo library to select and upload photos and videos.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>We need permission to save photos and videos to your photo library.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>This app requires access to your contacts to provide better services.</string>
+
 </dict>
 </plist>
