added support for ios

--- a/ios/App/Podfile
+++ b/ios/App/Podfile
@@ -34,6 +34,7 @@ end
 target 'App' do
   capacitor_pods
   # Add your Pods here
+  pod 'ffmpeg-kit-ios-full-gpl'
 end
 
 post_install do |installer|
