--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@capacitor/clipboard": "^5.0.0",
     "@capacitor/core": "^5.7.8",
     "@capacitor/device": "^5.0.0",
+    "@capacitor/filesystem": "^6.0.1",
     "@capacitor/geolocation": "^5.0.0",
     "@capacitor/haptics": "^5.0.0",
     "@capacitor/ios": "^5.7.8",
